Update PlayerInfo proto swagger and so on
